i28n update with new layout
- Add translation for en, es & fr

--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -24,6 +24,18 @@
 	"optLikeNone": {
 		"message": "Disable"
 	},
+	"optLikeInstant" : {
+		"message": "Instant Like"
+	},
+	"optLikeCustom": {
+		"message": "Custom timer"
+	},
+	"optLikePercentage": {
+		"message": "Percentage"
+	},
+	"optLikeMinutes" :{
+		"message": "Minutes"
+	},
 	"linkDonate": {
 		"message": "Donate"
 	},
