--- a/app/_locales/de/messages.json
+++ b/app/_locales/de/messages.json
@@ -24,6 +24,18 @@
 	"optLikeNone": {
 		"message": "Deaktivieren"
 	},
+	"optLikeInstant" : {
+		"message": "Instant Like"
+	},
+	"optLikeCustom": {
+		"message": "Custom timer"
+	},
+	"optLikePercentage": {
+		"message": "Percentage"
+	},
+	"optLikeMinutes" :{
+		"message": "Minutes"
+	},
 	"linkDonate": {
 		"message": "Spenden"
 	},
