--- a/app/_locales/de/messages.json
+++ b/app/_locales/de/messages.json
@@ -12,7 +12,7 @@
 		"description": "Beschreibung der Anwendung"
 	},
 	"appDescDetail": {
-		"message": "Alles was dieses AddOn tut ist den Like-Knopf auf abonnierten Videos drücken. Du brauchst nichts tun und brauchst dich nirgendwo mit dem AddOn anmelden. Es ist auch möglich jedes Video ob abonniert oder nicht zu Liken. Warum sollte man das tun? Wieso nicht! Hab keine Angst Vorschläge für das AddOn abzugeben oder mir zu helfen:",
+		"message": "Alles was dieses AddOn tut ist den Like-Knopf auf abonnierten Videos drücken. Du brauchst nichts tun und brauchst dich nirgendwo mit dem AddOn anmelden. Es ist auch möglich einfach jedes video zu Liken (nicht nur Abonnierte). Warum sollte man das tun? Wieso nicht! Hab keine Angst Vorschläge für das AddOn abzugeben oder mir zu helfen:",
 		"description": "Detaillierte Beschreibung für den AddOn store"
 	},
 	"optLikeSub": {
@@ -25,16 +25,16 @@
 		"message": "Deaktivieren"
 	},
 	"optLikeInstant" : {
-		"message": "Instant Like"
+		"message": "Sofort Liken"
 	},
 	"optLikeCustom": {
-		"message": "Custom timer"
+		"message": "Benutzerdefinierte Wartezeit"
 	},
 	"optLikePercentage": {
-		"message": "Percentage"
+		"message": "Prozent"
 	},
 	"optLikeMinutes" :{
-		"message": "Minutes"
+		"message": "Minuten"
 	},
 	"linkDonate": {
 		"message": "Spenden"
