--- a/app/_locales/de/messages.json
+++ b/app/_locales/de/messages.json
@@ -28,7 +28,7 @@
 		"message": "Sofort Liken"
 	},
 	"optLikeCustom": {
-		"message": "Benutzerdefinierte Wartezeit"
+		"message": "Benutzerdefiniert"
 	},
 	"optLikePercentage": {
 		"message": "Prozent"
