--- a/app/_locales/nl/messages.json
+++ b/app/_locales/nl/messages.json
@@ -1,1 +1,33 @@
-
+{
+  "appName": {
+    "message": "YouTube Auto Like",
+    "description": "Naam van de applicatie"
+  },
+  "appNamePart2": {
+    "message": "Auto Like",
+    "description": "Naam van de applicatie na 'YouTube'"
+  },
+  "appDesc": {
+    "message": "Liked de YouTube videos van je favoriete content makers automagisch.",
+    "description": "Beschrijving van de applicatie"
+  },
+  "appDescDetail": {
+    "message": "Het enige wat deze extensie doet, is het indrukken van de like knop van videos van kanalen waarop je bent geabonneerd. Geen inspanning vereist. Geen authenticatie vereist. Je kunt zelfs ELKE video liken. Waarom? Geen idee. Ga los. Schroom niet om suggesties achter te laten:",
+    "description": "Beschrijving voor de winkel pagina"
+  },
+  "optLikeSub": {
+    "message": "Vindt videos alleen leuk van geabonneerde kanalen"
+  },
+  "optLikeAll": {
+    "message": "Vindt alle videos leuk"
+  },
+  "optLikeNone": {
+    "message": "Schakel uit"
+  },
+  "linkDonate": {
+    "message": "Doneer"
+  },
+  "linkContribute": {
+    "message": "Bijdragen"
+  }
+}
