--- a/app/_locales/es/messages.json
+++ b/app/_locales/es/messages.json
@@ -3,17 +3,19 @@
 		"message": "YouTube Auto Like",
 		"description": "El nombre de la applicacion"
 	},
-  "appNamePart2": {
-    "message": "Auto Like",
-    "description": "Nombre de la applicacion despues de 'YouTube'"
-  },
 	"appDesc": {
 		"message": "Este plugin like automaticamente los videos de YouTube.",
 		"description": "La descripcion de la application"
 	},
-  "appDescDetail": {
+  "appStoreDesc": {
     "message": "Este plugin like automáticamente los vídeos de YouTube. Puedes elegir de utilizar el plugin en todos los vídeos o unicamente en los vídeos suscribidos,  tambien puedes desactivar el plugin. Puedes poner un dislike en un vídeo, despues el plugin no pondra like automáticamente. Ninguna conexión necesitada. Puedes señalar problemas, proponer ideos y contribuir.",
     "description": "Completa descripcion para la pagina web"
+  },
+  "optLikeWhatTitle": {
+    "message": "¿Qué videos?"
+  },
+  "optLikeWhenTitle": {
+    "message": "¿Cuan rápido?"
   },
 	"optLikeSub": {
 		"message": "Like los videos de los canales suscritos",
@@ -27,12 +29,17 @@
 		"message": "Desactivar",
 		"description": "3era option del menu"
 	},
-  "linkDonate": {
-    "message": "Dar",
-    "description": "Vinculo para ayudar el creador del plugin"
+  "optDisable": {
+		"message": "Desactivar"
+	},
+  "optLikeInstant": {
+    "message": "Instantáneamente"
   },
-  "linkContribute": {
-    "message": "Contribuir",
-    "description" : "Vinculo para proponer cambios"
+  "optLikeTimed": {
+    "message": "Después de 2 minutos"
+  },
+  "linkDonate": {
+    "message": "¡Dar!",
+    "description": "Vinculo para ayudar el creador del plugin"
   }
 }
