Add bug report link

--- a/app/_locales/es/messages.json
+++ b/app/_locales/es/messages.json
@@ -41,5 +41,8 @@
   "linkDonate": {
     "message": "¡Dar!",
     "description": "Vinculo para ayudar el creador del plugin"
+  },
+  "linkReport": {
+    "message": "Report a Bug"
   }
 }
