Add option to like video after watching 50%

--- a/app/_locales/de/messages.json
+++ b/app/_locales/de/messages.json
@@ -35,6 +35,9 @@
   "optLikeTimed": {
     "message": "Na 2 minuten"
   },
+  "optLikePercent": {
+    "message": "After I've watched 50%"
+  },
   "linkDonate": {
     "message": "Spenden!"
   },
