--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -33,6 +33,9 @@
   "optLikeTimed": {
     "message": "After 2 minutes"
   },
+  "optLikePercent": {
+    "message": "After I've watched 50%"
+  },
   "linkDonate": {
     "message": "Donate!"
   },
