--- a/app/_locales/es/messages.json
+++ b/app/_locales/es/messages.json
@@ -38,6 +38,9 @@
   "optLikeTimed": {
     "message": "Después de 2 minutos"
   },
+  "optLikePercent": {
+    "message": "After I've watched 50%"
+  },
   "linkDonate": {
     "message": "¡Dar!",
     "description": "Vinculo para ayudar el creador del plugin"
