--- a/app/_locales/nl/messages.json
+++ b/app/_locales/nl/messages.json
@@ -32,6 +32,9 @@
   "optLikeTimed": {
     "message": "Nach 2 minuten"
   },
+  "optLikePercent": {
+    "message": "After I've watched 50%"
+  },
   "linkDonate": {
     "message": "Doneer"
   },
