--- a/src/_locales/pl/messages.json
+++ b/src/_locales/pl/messages.json
@@ -36,12 +36,12 @@
     "message": "Po dwóch minutach"
   },
   "optLikePercent": {
-    "message": "After watching 50%"
+    "message": "Po obejrzeniu 50%"
   },
   "linkDonate": {
     "message": "Wspomóż!"
   },
   "linkReport": {
-    "message": "Report a Bug"
+    "message": "Zgłoś błąd"
   }
 }
