Add random timer

--- a/app/_locales/de/messages.json
+++ b/app/_locales/de/messages.json
@@ -36,6 +36,9 @@
 	"optLikeMinutes" :{
 		"message": "Minuten"
 	},
+	"optLikeRandom" :{
+		"message": "Random timer"
+	},
 	"linkDonate": {
 		"message": "Spenden"
 	},
