--- a/app/_locales/fr/messages.json
+++ b/app/_locales/fr/messages.json
@@ -36,6 +36,9 @@
 	"optLikeMinutes" :{
 		"message": "Minutes"
 	},
+	"optLikeRandom" :{
+		"message": "Random timer"
+	},
 	"linkDonate": {
 		"message": "Soutenir",
 		"description" : "Donner de l'argent pour aider le createur du plugin"
