--- a/app/_locales/sv/messages.json
+++ b/app/_locales/sv/messages.json
@@ -36,6 +36,9 @@
   "optLikeMinutes": {
     "message": "Minuter"
   },
+  "optLikeRandom" :{
+    "message": "Random timer"
+  },
   "linkDonate": {
     "message": "Donera"
   },
