--- a/app/_locales/uk/messages.json
+++ b/app/_locales/uk/messages.json
@@ -32,6 +32,9 @@
 	"optLikeMinutes" :{
 		"message": "На хвилині"
 	},
+	"optLikeRandom" :{
+		"message": "Random timer"
+	},
 	"linkDonate": {
 		"message": "Підтримай грошима"
 	},
