--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -32,6 +32,9 @@
 	"optLikeMinutes" :{
 		"message": "Minutes"
 	},
+	"optLikeRandom" :{
+		"message": "Random timer"
+	},
 	"linkDonate": {
 		"message": "Donate"
 	},
