--- a/app/_locales/nl/messages.json
+++ b/app/_locales/nl/messages.json
@@ -38,6 +38,9 @@
   "optLikeMinutes" :{
     "message": "Minutes"
   },
+  "optLikeRandom" :{
+    "message": "Random timer"
+  },
   "linkDonate": {
     "message": "Doneer"
   },
