--- a/app/_locales/pl/messages.json
+++ b/app/_locales/pl/messages.json
@@ -39,6 +39,9 @@
   "optLikeMinutes" :{
     "message": "Minutes"
   },
+  "optLikeRandom" :{
+    "message": "Random timer"
+  },
   "linkDonate": {
     "message": "Donate"
   },
