--- a/app/_locales/fr/messages.json
+++ b/app/_locales/fr/messages.json
@@ -3,10 +3,6 @@
 		"message": "YouTube Auto Like",
 		"description": "The name of the application"
 	},
-	"appNamePart2": {
-		"message": "Auto Like",
-		"description": "Nom de l'application après 'YouTube'"
-	},
 	"appDesc": {
 		"message": "Like automatiquement les vidéos YouTube videos des vos créateurs préférés.",
 		"description": "La description de l'application"
@@ -39,6 +35,15 @@
 	"optLikeRandom" :{
 		"message": "Random timer"
 	},
+	"optUseList": {
+		"message": "Utiliser la liste"
+	},
+	"optBlackList": {
+		"message": "Black liste mode"
+	},
+	"optWhiteList": {
+		"message": "White liste mode"
+	},
 	"linkDonate": {
 		"message": "Soutenir",
 		"description" : "Donner de l'argent pour aider le createur du plugin"
@@ -46,5 +51,11 @@
 	"linkContribute": {
 		"message": "Contribuer",
 		"description" : "Lien pour contribuer au plugin"
+	},
+	"mngName": {
+		"message": "Nom de la chaine"
+	},
+	"mngURL": {
+		"message": "URL de la chaine"
 	}
 }
