Fix JSON syntax

--- a/src/_locales/de/messages.json
+++ b/src/_locales/de/messages.json
@@ -6,7 +6,7 @@
     "message": "Like automatisch jedes Video von deinen lieblings YouTubern"
   },
   "appStoreDesc": {
-    "message": "Hämmert jedes mal auf den Likebutton, wenn du ein Video von einem abonnierten Kanal guckst! Keinen Aufwand mehr. Keine Anmeldung nötig. Wenn du ein Video schon gedisliked hast, wird dieses Add-on diese (hoffentlich) weise Entscheidung nicht überschreiben. Außerdem kannst du auswählen:  Wann geliket werden soll: erst nach 2 Minuten! - sofort automatisch. Du wahnsinnige Person, du! Schlage uns neue Features vor oder schreibe sie direkt selber:",
+    "message": "Hämmert jedes mal auf den Likebutton, wenn du ein Video von einem abonnierten Kanal guckst! Keinen Aufwand mehr. Keine Anmeldung nötig. Wenn du ein Video schon gedisliked hast, wird dieses Add-on diese (hoffentlich) weise Entscheidung nicht überschreiben. Außerdem kannst du auswählen:  Wann geliket werden soll: erst nach 2 Minuten! - sofort automatisch. Du wahnsinnige Person, du! Schlage uns neue Features vor oder schreibe sie direkt selber:"
   },
   "appStoreContribute": {
     "message": "Contribute"
