--- a/src/_locales/nl/messages.json
+++ b/src/_locales/nl/messages.json
@@ -1,12 +1,12 @@
 {
   "appName": {
-    "message": "YouTube Auto Like",
+    "message": "YouTube Auto Like"
   },
   "appDesc": {
-    "message": "Liked de YouTube videos van je favoriete content makers automagisch.",
+    "message": "Liked de YouTube videos van je favoriete content makers automagisch."
   },
   "appStoreDesc": {
-    "message": "Het enige wat deze extensie doet, is het indrukken van de like knop van videos van kanalen waarop je bent geabonneerd. Geen inspanning vereist. Geen authenticatie vereist. Je kunt zelfs ELKE video liken.",
+    "message": "Het enige wat deze extensie doet, is het indrukken van de like knop van videos van kanalen waarop je bent geabonneerd. Geen inspanning vereist. Geen authenticatie vereist. Je kunt zelfs ELKE video liken."
   },
   "appStoreContribute": {
     "message": "Schroom niet om suggesties achter te laten"
