--- a/src/_locales/pl/messages.json
+++ b/src/_locales/pl/messages.json
@@ -6,7 +6,7 @@
     "message": "Automatycznie lubi filmy od twoich ulubionych twórców."
   },
   "appStoreDesc": {
-    "message": "Automatycznie naciśnięcie przycisku \"Lubię to\", gdy oglądasz film z subskrybowanego kanału! Nie wymaga żadnego wysiłku. Brak uwierzytelnienia twojego konta. Jeśli film ci się nie podoba, rozszerzenie nie zmieni twojego wyboru. Dodatkowo możesz: - Być bardziej wybiórczym: Lubić filmy dopiero po obejrzeniu 2 minut! - Automatycznie lubić KAŻDY film. Jesteś szalony! Zaproponuj nowe funkcje lub współtwórz:",
+    "message": "Automatycznie naciśnięcie przycisku \"Lubię to\", gdy oglądasz film z subskrybowanego kanału! Nie wymaga żadnego wysiłku. Brak uwierzytelnienia twojego konta. Jeśli film ci się nie podoba, rozszerzenie nie zmieni twojego wyboru. Dodatkowo możesz: - Być bardziej wybiórczym: Lubić filmy dopiero po obejrzeniu 2 minut! - Automatycznie lubić KAŻDY film. Jesteś szalony! Zaproponuj nowe funkcje lub współtwórz:"
   },
   "appStoreContribute": {
     "message": "Contribute"
