--- a/src/_locales/pt_BR/messages.json
+++ b/src/_locales/pt_BR/messages.json
@@ -6,7 +6,7 @@
     "message": "Curta automaticamente vídeos do YouTube dos seus criadores de conteúdo favoritos."
   },
   "appStoreDesc": {
-    "message": "Clique no like sempre que assistir a um vídeo de um canal inscrito! Não precisa se autenticar e é automático. Se você marcou o vídeo como 'não gostei' não iremos alterar essa escolha. Além disso, você pode escolher: - Curtir apenas 2 minutos depois de ter assistido o vídeo! - Curtir TODOS os vídeos, mesmo quando não for inscrito, seu louco! Sugestões para novas funcionalidades ou contribuições:",
+    "message": "Clique no like sempre que assistir a um vídeo de um canal inscrito! Não precisa se autenticar e é automático. Se você marcou o vídeo como 'não gostei' não iremos alterar essa escolha. Além disso, você pode escolher: - Curtir apenas 2 minutos depois de ter assistido o vídeo! - Curtir TODOS os vídeos, mesmo quando não for inscrito, seu louco! Sugestões para novas funcionalidades ou contribuições:"
   },
   "appStoreContribute": {
     "message": "Contribute"
