--- a/src/_locales/fr/messages.json
+++ b/src/_locales/fr/messages.json
@@ -1,12 +1,12 @@
 {
 	"appName": {
-		"message": "YouTube Auto Like",
+		"message": "YouTube Auto Like"
 	},
 	"appDesc": {
-		"message": "Like automatiquement les vidéos YouTube videos des vos créateurs préférés.",
+		"message": "Like automatiquement les vidéos YouTube videos des vos créateurs préférés."
 	},
   "appStoreDesc": {
-    "message": "Ce plugin like automatiquement les vidéos YouTube, comme cela vous n'oubliez plus de supporter vos créateurs préférés. Vous pouvez choisir d'aimer toutes les vidéos, seulement des chaines souscrites ou aucune. Si vous dislikez une vidéo, celle-ci ne sera pas reliker par la suite. Aucune connexion nécessaire. Vous pouvez proposer de nouvelles fonctionnalités ou contribuer au plugin.",
+    "message": "Ce plugin like automatiquement les vidéos YouTube, comme cela vous n'oubliez plus de supporter vos créateurs préférés. Vous pouvez choisir d'aimer toutes les vidéos, seulement des chaines souscrites ou aucune. Si vous dislikez une vidéo, celle-ci ne sera pas reliker par la suite. Aucune connexion nécessaire. Vous pouvez proposer de nouvelles fonctionnalités ou contribuer au plugin."
   },
   "appStoreContribute": {
     "message": "Contribuer"
@@ -18,13 +18,13 @@
     "message": "À quelle vitesse?"
   },
 	"optLikeSub": {
-		"message": "Like les vidéos des chaines abonnées",
+		"message": "Like les vidéos des chaines abonnées"
 	},
 	"optLikeAll": {
-		"message": "Like toutes les vidéos",
+		"message": "Like toutes les vidéos"
 	},
 	"optLikeNone": {
-		"message": "Désactiver",
+		"message": "Désactiver"
   },
   "optDisable": {
 		"message": "Désactiver"
@@ -39,7 +39,7 @@
     "message": "After watching 50%"
   },
   "linkDonate": {
-    "message": "Soutenir!",
+    "message": "Soutenir!"
   },
   "linkReport": {
     "message": "Report a Bug"
