Add support for localized attributes

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -39,9 +39,9 @@
     "message": "After watching 50%"
   },
   "linkDonate": {
-    "message": "Donate!"
+    "message": "Feed my cats"
   },
   "linkReport": {
-    "message": "Report a Bug"
+    "message": "Something wrong?"
   }
 }
