Add reload notice i18n string

--- a/src/_locales/de/messages.json
+++ b/src/_locales/de/messages.json
@@ -40,5 +40,8 @@
   },
   "linkReport": {
     "message": "Bug melden"
+  },
+  "reloadNotice": {
+    "message": "Reload the page to apply changes."
   }
 }
