--- a/src/_locales/pt_BR/messages.json
+++ b/src/_locales/pt_BR/messages.json
@@ -40,5 +40,8 @@
   },
   "linkReport": {
     "message": "Algum problema?"
+  },
+  "reloadNotice": {
+    "message": "Reload the page to apply changes."
   }
 }
