--- a/app/_locales/fr/messages.json
+++ b/app/_locales/fr/messages.json
@@ -1,27 +1,27 @@
 {
 	"appName": {
 		"message": "YouTube Auto Like",
-		"description": "The name of the application"
+		"description": "Nom de l'application"
 	},
 	"appDesc": {
-		"message": "Like automatiquement les vidéos YouTube videos des vos créateurs préférés.",
-		"description": "La description de l'application"
+		"message": "Like automatiquement les vidéos YouTube de vos créateurs préférés.",
+		"description": "Description de l'application"
 	},
 	"appDescDetail": {
-		"message": "Ce plugin like automatiquement les vidéos YouTube, comme cela vous n'oubliez plus de supporter vos créateurs préférés. Vous pouvez choisir d'aimer toutes les vidéos, seulement des chaines souscrites ou aucune. Si vous dislikez une vidéo, celle-ci ne sera pas reliker par la suite. Aucune connexion nécessaire. Vous pouvez proposer de nouvelles fonctionnalités ou contribuer au plugin.",
+		"message": "Ce plugin like automatiquement les vidéos YouTube. Comme ça, vous n'oublierez plus de supporter vos créateurs préférés. Vous pouvez choisir d'aimer toutes les vidéos, seulement des chaînes souscrites ou aucune. Si vous dislikez une vidéo, celle-ci ne sera pas relikée par la suite. Aucune connexion nécessaire. Vous pouvez proposer de nouvelles fonctionnalités ou contribuer au plugin.",
 		"description": "Description detaillée pour la page web du plugin"
 	},
 	"optLikeSub": {
-		"message": "Like les vidéos des chaines abonnées"
+		"message": "Liker les vidéos des chaines abonnées"
 	},
 	"optLikeAll": {
-		"message": "Like toutes les vidéos"
+		"message": "Liker toutes les vidéos"
 	},
 	"optLikeNone": {
 		"message": "Désactiver"
 	},
 	"optLikeInstant" : {
-		"message": "Like instantanément"
+		"message": "Liker instantanément"
 	},
 	"optLikeCustom": {
 		"message": "Personnaliser"
@@ -33,16 +33,16 @@
 		"message": "Minutes"
 	},
 	"optLikeRandom" :{
-		"message": "Random timer"
+		"message": "Minuteur aléatoire"
 	},
 	"optUseList": {
 		"message": "Utiliser la liste"
 	},
 	"optBlackList": {
-		"message": "Black liste mode"
+		"message": "Mode liste noire"
 	},
 	"optWhiteList": {
-		"message": "White liste mode"
+		"message": "Mode liste blanche"
 	},
 	"linkDonate": {
 		"message": "Soutenir",
@@ -53,9 +53,9 @@
 		"description" : "Lien pour contribuer au plugin"
 	},
 	"mngName": {
-		"message": "Nom de la chaine"
+		"message": "Nom de la chaîne"
 	},
 	"mngURL": {
-		"message": "URL de la chaine"
+		"message": "URL de la chaîne"
 	}
 }
