Check if list is empty and display a warning if so.
Remove use list at install if list is empty.
Fix #26

--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -44,6 +44,9 @@
 	"optWhiteList": {
 		"message": "White list mode"
 	},
+	"optWhiteListWarning": {
+		"message": "⚠️ list is empty, nothing will be liked"
+	},
 	"linkDonate": {
 		"message": "Donate"
 	},
