Updated DE translation
translated "reloadNotice" and "appStoreContribute"

--- a/src/_locales/de/messages.json
+++ b/src/_locales/de/messages.json
@@ -9,7 +9,7 @@
     "message": "Hämmert jedes mal auf den Likebutton, wenn du ein Video von einem abonnierten Kanal guckst! Keinen Aufwand mehr. Keine Anmeldung nötig. Wenn du ein Video schon gedisliked hast, wird dieses Add-on diese (hoffentlich) weise Entscheidung nicht überschreiben. Außerdem kannst du auswählen:  Wann geliket werden soll: erst nach 2 Minuten! - sofort automatisch. Du wahnsinnige Person, du! Schlage uns neue Features vor oder schreibe sie direkt selber:"
   },
   "appStoreContribute": {
-    "message": "Contribute"
+    "message": "Beitragen"
   },
   "optLikeWhatTitle": {
     "message": "Welches Video?"
@@ -42,6 +42,6 @@
     "message": "Bug melden"
   },
   "reloadNotice": {
-    "message": "Reload the page to apply changes."
+    "message": "Lade die Seite neu, um Änderungen zu übernehmen."
   }
 }
