Use extension-cli, manifest v3, & update async code

--- a/assets/locales/en/messages.json
+++ b/assets/locales/en/messages.json
@@ -3,7 +3,7 @@
     "message": "YouTube Auto Like"
   },
   "appDesc": {
-    "message": "Automatically like YouTube videos from your favorite content creators."
+    "message": "Never forget to like a video again."
   },
   "appStoreDesc": {
     "message": "Presses the like button so you don't have to! Features:  - Like videos instantly from subscribed channels, or like every video  - Be more selective: like after you've watched 2 minutes or 50% through  - Waits for ads to finish when using a timed option  - Won't override your choice if you've already disliked a video  - Lightweight: won't slow down your YouTube load time"
